--- a/Help/Style.css
+++ b/Help/Style.css
@@ -1,6 +1,7 @@
 body {
 	color:#EEE;
 	background-color:#222;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 a:link, a:hover, a:active, a:visited {
